couriers/k8_deploy/courierAllocation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier-allocation
  labels:
    app: courier-allocation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courier-allocation
  template:
    metadata:
      labels:
        app: courier-allocation
    spec:
      containers:
      - name: courier-allocation
        image: tiesta/asm_courier_allocation:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: 0.2
            memory: "200Mi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: courier-allocation
  labels:
    app: courier-allocation
spec:
  type: LoadBalancer
  selector:
    app: courier-allocation
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
    nodePort: 30000
