couriers/k8_deploy/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-courier
  labels:
    app: courier
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: courier
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-courier
  labels:
    app: courier
spec:
  selector:
    matchLabels:
      app: courier
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: courier
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
